project(mirsking_leetcode)
cmake_minimum_required(VERSION 2.8)

add_definitions(-std=c++11)

add_executable(medium15
    medium15_3sum/main.cpp
)

add_executable(medium16
    medium16_3sum_closest/main.cpp
)

add_executable(medium18
    medium18_4sum/main.cpp
)

add_executable(medium31
    medium31_next_permutations/main.cpp
)

add_executable(medium39
    medium39_combination_sum/main.cpp
)

add_executable(medium40
    medium40_combination_sum_ii/main.cpp
)

add_executable(medium47
    medium47_permutations/main.cpp
)

add_executable(medium50
    medium50_pow/main.cpp
)

add_executable(medium64
    medium64_minimum_path_num/main.cpp
)

add_executable(medium73
    medium73_set_matrix_zeroes/main.cpp
)

add_executable(medium74
    medium74_search_2d_matrix/main.cpp
)

add_executable(medium77
    medium77_combinations/main.cpp
)

add_executable(medium216
    medium216_combination_sum_iii/main.cpp
)

add_executable(medium230
    medium230_kth_smallest_element_in_BST/main.cpp
)

